fix warning message for SpringExtension